[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Text/IntroText.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/UIPlatform.gd" type="Script" id=2]
[ext_resource path="res://Models/Materials/Button.material" type="Material" id=3]
[ext_resource path="res://Sounds/click.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=7]
resource_name = "ButtonDown"
tracks/0/type = "value"
tracks/0/path = NodePath("../PlatformButton:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10785, 0 ), Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0162989, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "MoveUIUp"
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0.043, -2.4, 3.267, 0, 0, 0, 1, 1, 1, 1, 0.4, 1, 0.0430002, 1.9316, 5.01349, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="Animation" id=8]
resource_name = "ButtonDown"
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformButton:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10785, 0 ), Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0224202, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.790301, 1, 0.775106 )

[node name="UIPlatformInput" type="CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.83827, -0.596307, -0.0800796 )
width = 1.8
height = 0.2
depth = 1.8
script = ExtResource( 2 )

[node name="UIPopUpAnimPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../UIIntroductionPopup")
anims/ButtonDown = SubResource( 7 )
anims/MoveUIUp = SubResource( 6 )

[node name="ButtonDownAnim" type="AnimationPlayer" parent="."]
anims/ButtonDown = SubResource( 8 )

[node name="UIIntroductionPopup" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0430002, -2.4, 3.267 )
invert_faces = true
width = 4.74886
height = 4.31502
depth = 0.002
material = SubResource( 5 )

[node name="PlatformButton" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.10785, 0 )
width = 1.6
height = 0.208
depth = 1.6
material = ExtResource( 3 )

[node name="Area" type="Area" parent="PlatformButton"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0203557, 0.0102665, 0.0146208 )

[node name="CollisionShape" type="CollisionShape" parent="PlatformButton/Area"]
shape = SubResource( 4 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="PlatformButton/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="PlatformButton/Area" to="." method="_on_Area_body_exited"]
